--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "15.0.2",
-    "fumadocs-ui": "14.2.1",
     "fumadocs-core": "14.2.1",
+    "fumadocs-mdx": "11.1.1",
+    "fumadocs-openapi": "^5.5.7",
+    "fumadocs-ui": "14.2.1",
+    "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "fumadocs-mdx": "11.1.1"
+    "shiki": "^1.22.2"
   },
   "devDependencies": {
     "@types/node": "22.8.6",
